# cmajor-rs

./: .gitignore  Cargo.toml  README.md  Repro.cmajor  build.rs  rustfmt.toml
.github/workflows/: build.yml  rust.yml
cmajor/: Cargo.toml  build.rs
cmajor-core/: Cargo.toml
cmajor-core/src/: diagnostic.rs  lib.rs
cmajor-core/src/ffi/: performer.rs  program.rs
cmajor-core/src/value/: mod.rs  values.rs
cmajor-core/static/: CMakeLists.txt
cmajor-core/tests/: endpoints.rs  engine.rs  program.rs
cmajor-macros/: Cargo.toml
cmajor-macros/src/: lib.rs
cmajor-macros/tests/: parsing.rs
cmajor/src/: lib.rs  library.rs
cmajor/src/endpoint/: mod.rs
cmajor/src/engine/: annotation.rs  externals.rs  mod.rs
cmajor/src/ffi/: externals.rs  mod.rs
cmajor/src/performer/: mod.rs
cmajor/src/performer/endpoints/: stream.rs
cmajor/src/value/: values.rs
examples/: Cargo.toml  endpoints.rs  hello_world.rs  load.rs  patch.rs  repro.rs
scripts/: fetch-cmajor-linux.sh  fetch-cmajor-macos.sh  fetch-cmajor.py  load-patches.py
src/: buffer.rs  diagnostic.rs  engine.rs  lib.rs  library.rs  performer.rs  program.rs  spsc.rs  types.rs
src/endpoint/: buffer.rs  details.rs  mod.rs
src/engine/: annotation.rs  endpoint.rs  engine.rs  externals.rs  mod.rs  program_details.rs
src/ffi/: engine.rs  engine_factory.rs  externals.rs  mod.rs  performer.rs  program.rs  string.rs  types.rs
src/performer/: atomic.rs  builder.rs  endpoints.rs  handle.rs  mod.rs  performer.rs  spsc.rs
src/performer/endpoints/: event.rs  input_event.rs  input_value.rs  mod.rs  output_value.rs  stream.rs  value.rs
src/value/: mod.rs  reflect.rs  types.rs  value.rs  values.rs
static/: CMakeLists.txt  main.cpp
tests/: endpoints.rs  engine.rs  program.rs
