[package]
name = "cmajor"
description = ""
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bytes = "1.5.0"
libloading = "0.8.0"
rtrb = "0.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
smallvec = "1.11.1"
thiserror = "1.0.48"

[dev-dependencies]
cpal = "0.15.2"
assert_no_alloc = "1.1.2"