[package]
name = "cmajor"
description = "Rust bindings for the Cmajor JIT engine."
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
static = ["dep:cmake"]

[dependencies]
bytes = "1.5.0"
dotenvy = "0.15.7"
libloading = "0.8.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
smallvec = "1.11.1"
thiserror = "1.0.48"

[dev-dependencies]
cpal = "0.15.2"
assert_no_alloc = "1.1.2"

[build-dependencies]
cmake = { version = "0.1.50", optional = true }
